working user permissions and permission management